--- a/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 3.5.1  (SEE 3.5.1)
+	 *) fixed issue with if(a==b) not folding correctly
+
+
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
 
