--- a/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes with Version 3.5.2  (SEE 3.5.2)
+	 *) added properties of Cocoa Touch Objects
+	 *) added missing Cocoa Touch functions
+
+
 Changes with Version 3.5.1  (SEE 3.5.1)
 	 *) added CG functions and constants
 
