--- a/SubEthaEdit-Mac/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5.3  (SEE 3.5.3)
+	 *) fixed highlighting issues
+
 Changes with Version 3.5.1  (SEE 3.5.1)
 	 *) fixed highlighting issue with number 0
 	 *) fixed highlighting issue with state based contents of for, if, etc. blocks
