--- a/SubEthaEdit-Mac/German.lproj/ReleaseNotes.txt
+++ b/SubEthaEdit-Mac/German.lproj/ReleaseNotes.txt
@@ -1,3 +1,12 @@
+SubEthaEdit 3.5.4
+=================
+
+Changes:
+- Enabled the Web Inspector in the live Web Preview.
+
+Fixes:
+- Fixed issues with Mac OS X Lion.
+
 
 SubEthaEdit 3.5.3
 =================
