--- a/SubEthaEdit-Mac/Modes/bash.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/bash.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 4.0  (SEE 4.0)
+	 *) added scopes
+
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
      *) Various improvements
