--- a/SubEthaEdit-Mac/Modes/ActionScript.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/ActionScript.mode/Contents/Resources/ChangeLog.txt
@@ -1,18 +1,16 @@
-Changes with Version 4.0  (SEE 4.0)
-	 *) removed style information
+Changes with Version 4.0 (SEE 4.0)
+	*) SYNTAX: updated for syntax scopes
+	*) SYNTAX: markup cleanup
 
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
 
 Changes with Version 1.3 (SEE 2.6)
-
     *) Adding inline functions
 
 Changes with Version 1.2 (SEE 2.3)
-
     *) Fixed SEE-490
     *) Added fixes by Christian Rocha
 
-Changes with Version 1.1
-    
+Changes with Version 1.1    
     *) EXTENSIONS: Added uppercase variants where appropriate.
