--- a/SubEthaEdit-Mac/Modes/HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,12 +1,14 @@
+Changes with Version 4.0 (SEE 4.0)
+	*) SYNTAX: updated for syntax scopes
+	*) SYNTAX: markup cleanup
+
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
 
 Changes with Version 1.5 (SEE 2.6)
-
     *) Removing whitespace before and after headline symbols in popup
 
 Changes with Version 1.4 (SEE 2.5.1)
-
     *) Substituted 501 with `id -g` to make all utf-8 "do shell script" commands work on non-501 users. (fixes SEE-1042)
 
 Changes with Version 1.3 (SEE 2.5)
@@ -14,11 +16,9 @@ Changes with Version 1.3 (SEE 2.5)
     *) Fixed SEE-1018: HTML highlighting of javascript strings by deleting character state and expanding string state.
 
 Changes with Version 1.2 (SEE 2.3)
-    
     *) Fixed SEE-490
     *) Added Autocompletions
     *) Added single strings in tags
 
-Changes with Version 1.1
-    
+Changes with Version 1.1    
     *) EXTENSIONS: Added uppercase variants where appropriate.
