--- a/SubEthaEdit-Mac/Modes/Objective-J.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Objective-J.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 4.0  (SEE 4.0)
+	*) SYNTAX: updated for syntax scopes
+	*) SYNTAX: markup cleanup
+
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
 
@@ -10,19 +14,15 @@ Changes with Version 1.5 (SEE 2.5)
     *) AUTOCOMPLETE: added missing constants (AddressBook, NSError)
 
 Changes with Version 1.4 (SEE 2.3)
-
     *) SYMBOLS: Fixed SEE-490.
     *) AUTOCOMPLETE: Added important Carbon keywords
 
-Changes with Version 1.3
-    
+Changes with Version 1.3    
     *) SYNTAX: Added some missing Classes and Constants. HYR-587.
 
 Changes with Version 1.2
-    
     *) SYNTAX: Fixed preprocessor end regex. HYR-410.
 
-Changes with Version 1.1
-    
+Changes with Version 1.1    
     *) SYNTAX: Changed Character to state to fix HYR-371.
     *) Adding additional Cocoa classes, constants and functions
