--- a/SubEthaEdit-Mac/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -1,6 +1,9 @@
+Changes with Version 4.0 (SEE 4.0)
+	*) SYNTAX: updated for syntax scopes
+	*) SYNTAX: markup cleanup
+
 Changes with Version 3.5.1  (SEE 3.5.1)
 	 *) fixed issue with if(a==b) not folding correctly
-
 
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
@@ -28,10 +31,8 @@ Changes with Version 2.4 (by dom - SEE 2.3)
     *) added #mark to symbol recognition (like #pragma mark in C/Objective-C
 
 Changes with Version 2.3 (by dom)
-
     *) added AutocompleteAdditions (http://www.ruby-doc.org/ core api and http://rails.rubyonrails.org/)
     *) added core classes to syntax highlighting
 
 Changes with Version 2.2
-    
     *) EXTENSIONS: Added uppercase variants where appropriate.
