--- a/SubEthaEdit-Mac/Modes/SVNLog.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/SVNLog.mode/Contents/Resources/ChangeLog.txt
@@ -1,6 +1,9 @@
+Changes with Version 4.0 (SEE 4.0)
+	*) SYNTAX: updated for syntax scopes
+	*) SYNTAX: markup cleanup
+
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
 
 Changes with Version 1.0 (SEE 3.0)
-    
     *) made it look nice for "svn log"
