--- a/SubEthaEdit-Mac/Modes/XML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/XML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 4.0 (SEE 4.0)
+	*) SYNTAX: updated for syntax scopes
+	*) SYNTAX: markup cleanup
+
 Changes with Version 3.5  (SEE 3.5)
 	 *) fixed mode recognition string
 	 *) added code folding
@@ -12,14 +16,11 @@ Changes with Version 1.3 (SEE 2.5.1)
     *) Fixed issue SEE-1040: "Check Syntax" script has same key shortcut as block edit by changing it to ctrl-command-b
     *) Improved XSLT script to always use the same window and report errors
 
-
 Changes with Version 1.2 (SEE 2.5)
-
     *) added scripts: Close Last Tag, Check Well Fromedness, Validate, Transform With XSLT, Comment Selection, Insert/Edit HTML Color.
     *) EXTENSIONS: Added sdef, xsd
     *) Fixed SEE-913: Newlines in XML tags cause subsequent lines not to be syntax highlighted.
     *) Fixed SEE-1015 by simplifying attributes in new XML.mode
 
-Changes with Version 1.1
-    
+Changes with Version 1.1    
     *) EXTENSIONS: Added uppercase variants where appropriate.
