--- a/SubEthaEdit-Mac/Modes/bash.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/bash.mode/Contents/Resources/ChangeLog.txt
@@ -1,15 +1,14 @@
-Changes with Version 4.0  (SEE 4.0)
-	 *) added scopes
+Changes with Version 4.0 (SEE 4.0)
+	*) SYNTAX: updated for syntax scopes
+	*) SYNTAX: markup cleanup
 
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
      *) Various improvements
 
 Changes with Version 1.1 (SEE 2.5)
-
     *) Fixing standard location for bash and being more liberal about shebangs for bash.mode.
 
 Changes with Version 1.1 (SEE 2.5)
-
     *) added Scripts (Insert Shebang, chmod ug+x, Run in Terminal)
 
