--- a/SubEthaEdit-Mac/Modes/go.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/go.mode/Contents/Resources/ChangeLog.txt
@@ -1,2 +1,6 @@
+Changes with Version 4.0 (SEE 4.0)
+	*) SYNTAX: updated for syntax scopes
+	*) SYNTAX: markup cleanup
+
 Changes with Version 3.5.2  (SEE 3.5.2)
 	 *) initial go version
