--- a/SubEthaEdit-Mac/Modes/erlang.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/erlang.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+####################################### NB
+Hat tip to Olivier Sambourg
+for the Erlang Mode 1.0 from 2004!
+#######################################
+
 Changes with Version 4.0 (SEE 4.0)
 	*) added ChangeLog
 	*) SYNTAX: updated for syntax scopes
