[CHANGE] Mode - ruby - removed InfoPlist.strings, updated ChangeLog with NB for contribution and improvement, updated human readable copyright and get info string;

--- a/SubEthaEdit-Mac/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+############################################## NB
+Hat tip to Jeff Reinecke
+for the improvements over the original Mode!
+##############################################
+
 Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
