[CHANGE] Mode - erlang - removed CodaCompletion.plist, updated ChangeLog with NB for original contribution, updated human readable copyright and get info string;

--- a/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+############################################### NB
+Hat tip to Panic Inc. 
+for the original ASP-HTML Mode 1.0 from 2008!
+###############################################
+
 Changes with Version 4.0 (SEE 4.0)
 	*) added ChangeLog
 	*) SYNTAX: updated for syntax scopes
