[CHANGE] Mode - LassoScriptHTML - removed InfoPlist.strings, updated ChangeLog with NB for original contribution, updated human readable copyright and get info string;

--- a/SubEthaEdit-Mac/Modes/LassoScript-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/LassoScript-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,9 @@
+########################################## NB
+Hat tip to Xaren Consulting
+http://www.xaren.net
+for LassoScript-HTML Mode 3.5 from 2007!
+##########################################
+ 
 Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
