--- a/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,7 +1,8 @@
-######################### NB
+################################# NB
 Hat tip to Panic Inc. 
-for ASP-HTML Mode 3.6!
-#########################
+http://panic.com
+for ASP-HTML Mode 3.6 from 2008!
+#################################
 
 Changes with Version 4.0 (SEE 4.0)
 	*) added ChangeLog
