[CHANGE] Mode - Objective-J - removed InfoPlist.strings, updated ChangeLog with NB for original contribution, updated human readable copyright and get info string;

--- a/SubEthaEdit-Mac/Modes/Objective-J.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Objective-J.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+###################################### NB
+Hat tip to Arcaeum, LLC
+for Objective-J Mode 1.0 from 2004!
+#####################################
+
 Changes with Version 4.0  (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
