[CHANGE] Ruby - updated change log;

--- a/SubEthaEdit-Mac/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -1,5 +1,6 @@
 ############################################## NB
 Hat tip to Jeff Reinecke
+jeff@paploo.net
 for the improvements over the original Mode!
 ##############################################
 
