[CHANGE] Modes - updated release notes with style removal;

--- a/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -9,3 +9,5 @@ Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
 	*) removed StyleIDTransition.plist
+	*) SYNTAX: removed style information
+
