--- a/SubEthaEdit-Mac/Modes/Objective-J.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Objective-J.mode/Contents/Resources/ChangeLog.txt
@@ -6,6 +6,7 @@ for Objective-J Mode 1.0 from 2004!
 Changes with Version 4.0  (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
+	*) SYNTAX: removed style information
 
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
