--- a/SubEthaEdit-Mac/Modes/Conference.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Conference.mode/Contents/Resources/ChangeLog.txt
@@ -1,6 +1,7 @@
 Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
+	*) SYNTAX: removed style information
 
 Changes with Version 1.3 (SEE 3.0)
     *) .?! are now allowed in HEADINGS and SECTIONS
