--- a/SubEthaEdit-Mac/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
@@ -1,6 +1,7 @@
 Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
+	*) SYNTAX: removed style information
 
 Changes with Version 3.5.3  (SEE 3.5.3)
 	 *) fixed highlighting issues
