--- a/SubEthaEdit-Mac/Modes/erlang.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/erlang.mode/Contents/Resources/ChangeLog.txt
@@ -7,3 +7,4 @@ Changes with Version 4.0 (SEE 4.0)
 	*) added ChangeLog
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
+	*) SYNTAX: removed style information
