--- a/SubEthaEdit-Mac/Modes/ActionScript.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/ActionScript.mode/Contents/Resources/ChangeLog.txt
@@ -6,6 +6,7 @@ http://www.actionscripthero.com
 Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
+	*) added ExampleSyntax.txt
 
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
