--- a/SubEthaEdit-Mac/Modes/JSP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/JSP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -9,3 +9,4 @@ Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
 	*) SYNTAX: removed style information
+	*) added ExampleSyntax.txt
