--- a/SubEthaEdit-Mac/Modes/LassoScript-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/LassoScript-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -8,6 +8,7 @@ Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
 	*) SYNTAX: removed style information
+	*) added ExampleSyntax.txt
 
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
