--- a/SubEthaEdit-Mac/Modes/Perl.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/Perl.mode/Contents/Resources/ChangeLog.txt
@@ -1,6 +1,7 @@
 Changes with Version 4.0  (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
+	*) added ExampleSyntax.txt
 
 Changes with Version 3.5.1  (SEE 3.5.1)
     *) fixed spacing issue with heredocs SEE-3907
