[CHANGE] Prefs - Collab - added localisation for the me me card and removed the me card box title;

--- a/SubEthaEdit-Mac/German.lproj/Localizable.strings
+++ b/SubEthaEdit-Mac/German.lproj/Localizable.strings
@@ -981,4 +981,13 @@
 /* Collaboration Preferences - tool tip for the automatically map port toggle */
 "COLLAB_AUTOMATICALLY_MAP_PORT_TOOL_TIP" = "SubEthaEdit versucht automatisch den lokalen Port weiterzuleiten falls Sie sich hinter einem NAT befinden. Damit das funktioniert müssen Sie UPnP oder NAT-PMP auf Ihrem Router aktivieren.";
 
-
+/* Collaboration Preferences - Label for the user name text field */
+"COLLAB_USER_NAME_LABEL" = "Name:";
+/* Collaboration Preferences - Label for the user email text field */
+"COLLAB_USER_EMAIL_LABEL" = "E-Mail:";
+/* Collaboration Preferences - Image Menu - Use Image from Address Book option */
+"COLLAB_USER_IMAGE_AB" = "Mein Bild aus dem Adressbuch";
+/* Collaboration Preferences - Image Menu - Choose Image option */
+"COLLAB_USER_IMAGE_CHOOSE" = "Bild auswählen…";
+/* Collaboration Preferences - Image Menu - Clear Image option */
+"COLLAB_USER_IMAGE_CLEAR" = "Bild entfernen";
