--- a/SubEthaEdit-Mac/English.lproj/Localizable.strings
+++ b/SubEthaEdit-Mac/English.lproj/Localizable.strings
@@ -548,7 +548,7 @@
 "Please join me in SubEthaEdit:\n%@\n\n(You can download SubEthaEdit from http://www.codingmonkeys.de/subethaedit )" = "Please join me in SubEthaEdit:\n%@\n\n(You can download SubEthaEdit from http://www.codingmonkeys.de/subethaedit )";
 
 /* Label displayed below advanced icon and used as window title. */
-"PrecedencePrefsIconLabel" = "Modes";
+"PrecedencePrefsIconLabel" = "Triggers";
 
 /* Mode rules cannot be edited or removed. But you can disable them. */
 "PrecedencePrefsModeRuleTooltip" = "Mode supplied triggers cannot be edited or removed. But you can disable them.";
